[gd_scene load_steps=15 format=3 uid="uid://dvgkd5k4g87tx"]

[ext_resource type="Script" path="res://entities/scorpion/scorpion.gd" id="1_c2q6j"]
[ext_resource type="Texture2D" uid="uid://mhl1sve62ogo" path="res://assets/sprites/scorpion_spritesheet.png" id="2_ammxi"]
[ext_resource type="PackedScene" uid="uid://btk5ekt1aaicl" path="res://entities/hurtbox.tscn" id="3_16eti"]
[ext_resource type="Script" path="res://utilities/state_machine.gd" id="3_kg705"]
[ext_resource type="Script" path="res://entities/scorpion/scorpion_patrol.gd" id="4_fb552"]
[ext_resource type="PackedScene" path="res://utilities/extended_audio_stream_player.tscn" id="4_tr33y"]
[ext_resource type="AudioStream" uid="uid://cwx0dt8sp4hd1" path="res://assets/sounds/hit.wav" id="5_ry0wy"]
[ext_resource type="Script" path="res://entities/scorpion/scorpion_die.gd" id="6_6mnxs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr3gm"]
size = Vector2(205, 95)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykq5p"]
radius = 80.0
height = 240.0

[sub_resource type="Animation" id="Animation_k11ux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o8gru"]
resource_name = "die"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_o2l4q"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h88wg"]
_data = {
"RESET": SubResource("Animation_k11ux"),
"die": SubResource("Animation_o8gru"),
"walk": SubResource("Animation_o2l4q")
}

[node name="Scorpion" type="CharacterBody2D"]
scale = Vector2(-1, 1)
collision_layer = 4
script = ExtResource("1_c2q6j")

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
texture = ExtResource("2_ammxi")
hframes = 16
vframes = 2

[node name="WallCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(2.08165e-12, 140)
rotation = 1.5708
scale = Vector2(3, 3)
target_position = Vector2(2.08165e-12, 80)

[node name="GroundCheck" type="RayCast2D" parent="Pivot"]
position = Vector2(-150, 140)
scale = Vector2(3, 3)
target_position = Vector2(2.08165e-12, 40)

[node name="Hurtbox" parent="Pivot" instance=ExtResource("3_16eti")]
collision_mask = 2
monitoring = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hurtbox"]
position = Vector2(-18, 123)
shape = SubResource("RectangleShape2D_lr3gm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 110)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ykq5p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h88wg")
}

[node name="Hit" parent="." instance=ExtResource("4_tr33y")]
stream = ExtResource("5_ry0wy")
volume_db = -8.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_kg705")

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource("4_fb552")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("6_6mnxs")
